# gomoku_cpp

./: .clang-format  .gitignore  CMakeLists.txt  makefile  sample  sample.cpp
data/: five_mask.csv  four_close_mask.csv  four_jump_mask.csv  four_open_mask.csv  four_prohibit_mask.csv  skip_mask.csv  threeMask.csv  three_close_mask.csv  three_jump_mask.csv  three_open_mask.csv  three_prohibit_mask.csv  two_open_mask.csv
include/: alpha_beta.hpp  bit_board.hpp  common.hpp  csv_data.hpp  evaluate.hpp  gomoku.hpp  gomoku_ai.hpp  operater.hpp  prohibit.hpp  prohibited.hpp  zobrist_hash.hpp
sample/: sample.js
src/: .libgomoku.cpp  alpha_beta.cpp  bit_board.cpp  csv_data.cpp  evaluate.cpp  gomoku.cpp  gomoku_ai.cpp  gomoku_ai.hpp  operater.cpp  prohibit.cpp  prohibited.cpp  zobrist_hash.cpp
test/: makefile  test  testClass.cpp  testClass.hpp  testCsv.cpp  testCsv.hpp  testEvaluate.cpp  testEvaluate.hpp  testProhibit.cpp  testProhibit.hpp  testmove.cpp
